# deep-learning-hand-ons

./: .gitignore  Makefile  README.md  convolutional-NN-with-numpy.ipynb  neural-network-with-numpy.ipynb  pyproject.toml
numpy_from_scratch/: __init__.py
numpy_from_scratch/00_gradient_checking/: grad_check.py
numpy_from_scratch/gradient_checking/: __init__.py
numpy_from_scratch/linear_nn/: model.py  train.py
numpy_from_scratch/mlp/: model.py  train.py
shared/: __init__.py  data_utils.py  optimizers.py  test.ipynb
