[project]
name = "dl-hands-on"
version = "0.1.0"
description = "Hands-on deep learning implementations (Numpy + PyTorch)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mnist>=0.2.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
